--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.html
@@ -1,7 +1,7 @@
 <mat-nav-list class="azure-nav">
 
   <div class="nav-group">
-    <h3 class="group-title">GLOBAL</h3>
+    <h3 class="group-title">Global</h3>
 
     <a mat-list-item routerLink="/" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
       <mat-icon matListItemIcon>area_chart</mat-icon>
@@ -15,7 +15,7 @@
   </div>
 
   <div class="nav-group">
-    <h3 class="group-title">COMPTES COURANTS</h3>
+    <h3 class="group-title">Comptes courants</h3>
 
     <a mat-list-item routerLink="/cc-dashboard" routerLinkActive="active-link">
       <mat-icon matListItemIcon>dashboard</mat-icon>
