--- a/Frontend/BudgetTrackerUI/src/app/app.html
+++ b/Frontend/BudgetTrackerUI/src/app/app.html
@@ -1,5 +1,5 @@
-<div class="azure-wrapper">
-  <mat-toolbar class="azure-toolbar">
+<div class="app-wrapper">
+  <mat-toolbar class="app-toolbar">
     <button mat-icon-button (click)="toggleDrawer()">
       <mat-icon>menu</mat-icon>
     </button>
