--- a/Frontend/BudgetTrackerUI/src/app/life-insurance-statement/life-insurance-statement.html
+++ b/Frontend/BudgetTrackerUI/src/app/life-insurance-statement/life-insurance-statement.html
@@ -1,14 +1,11 @@
-<div class="container">
-    <div class="header"
-        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-        <h2>Historique des Relevés</h2>
+<h2>Historique des Relevés</h2>
 
-        <button mat-raised-button color="primary" (click)="openSaisie()">
-            <mat-icon>add</mat-icon> Nouvelle Saisie
-        </button>
-    </div>
+<button mat-flat-button color="primary" (click)="openSaisie()">
+    <mat-icon>add</mat-icon>
+    Ajouter une saisie
+</button>
 
-    <ag-grid-angular style="width: 100%; height: 700px;" class="ag-theme-alpine" [columnDefs]="columnDefsHistory" [defaultColDef]="defaultColDef"
-        [rowData]="historyData()" [gridOptions]="gridOptions" (cellValueChanged)="onCellValueChanged($event)">
-    </ag-grid-angular>
-</div>
+<ag-grid-angular style="width: 100%; height: 700px;" class="ag-theme-alpine" [columnDefs]="columnDefsHistory"
+    [defaultColDef]="defaultColDef" [rowData]="historyData()" [gridOptions]="gridOptions"
+    (cellValueChanged)="onCellValueChanged($event)">
+</ag-grid-angular>
