--- a/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.scss
+++ b/Frontend/BudgetTrackerUI/src/app/nav-menu/nav-menu.scss
@@ -1,5 +1,22 @@
 .group-title {
-  font-size: 14px;
-  font-weight: 500;
-  margin-left: 8px;
+  font-size: 11px;
+  margin: 15px 0 5px 0;
+  font-weight: bold;
+  color: #3a4752;
+  padding: 0 16px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
 }
+
+.active-link {
+    background-color: #43ced7;
+
+    .mdc-list-item__primary-text {
+        color: #ffffff !important;
+    }
+
+    mat-icon {
+      color: #ffffff;
+    }
+  }
+
