--- a/Frontend/BudgetTrackerUI/src/app/savings-statement/savings-statement.html
+++ b/Frontend/BudgetTrackerUI/src/app/savings-statement/savings-statement.html
@@ -1,13 +1,11 @@
-<div class="flex flex-col h-full gap-4">
-    <div class="flex justify-between items-center">
-        <h2 class="text-xl font-bold">Historique de l'épargne</h2>
-        <button mat-raised-button color="primary" (click)="addNewRow()">
-            + Ajouter une saisie
-        </button>
-    </div>
+<h2>Historique de l'épargne</h2>
 
-    <ag-grid-angular style="width: 100%; height: 600px;" class="ag-theme-alpine" [rowData]="rowData()"
-        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" (gridReady)="onGridReady($event)"
-        (cellValueChanged)="onCellValueChanged($event)">
-    </ag-grid-angular>
-</div>
+<button mat-flat-button color="primary" (click)="addNewRow()">
+    <mat-icon>add</mat-icon>
+    Ajouter une saisie
+</button>
+
+<ag-grid-angular style="width: 100%; height: 600px;" class="ag-theme-alpine" [rowData]="rowData()"
+    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" (gridReady)="onGridReady($event)"
+    (cellValueChanged)="onCellValueChanged($event)">
+</ag-grid-angular>
