--- a/Frontend/BudgetTrackerUI/src/app/cc-operations-list/cc-operations-list.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-operations-list/cc-operations-list.html
@@ -1,31 +1,18 @@
-<div class="operations-container">
-    <div *ngIf="isLoading()" class="flex flex-col items-center justify-center p-10 bg-white rounded-lg shadow-sm">
-        <mat-spinner diameter="60"></mat-spinner>
-        <p class="mt-4 text-gray-500 font-medium">Mise à jour des opérations...</p>
-    </div>
+<div *ngIf="isLoading()" class="flex flex-col items-center justify-center p-10 bg-white rounded-lg shadow-sm">
+    <p>Loading</p>
+</div>
 
-    <button mat-flat-button color="primary" *ngIf="showSaveAll()" (click)="saveAllSuggested()" [disabled]="isLoading()">
-      <mat-icon>done_all</mat-icon>
-      Sauvegarder toutes les suggestions affichées
-    </button>
+<button mat-flat-button color="primary" *ngIf="showSaveAll()" (click)="saveAllSuggested()" [disabled]="isLoading()">
+    <mat-icon>done_all</mat-icon>
+    Sauvegarder toutes les suggestions affichées
+</button>
 
-    <div class="grid-wrapper" [class.hidden]="isLoading()">
-        <ag-grid-angular style="width: 100%;" class="ag-theme-alpine shadow-sm" 
-        [preventDefaultOnContextMenu]="true"
-        [rowData]="operations"
-            [defaultColDef]="defaultColDef" 
-            [columnDefs]="columnDefs" 
-            [domLayout]="domLayout" 
-            [context]="gridContext"
-            [getRowId]="getRowId" 
-            [pagination]="true" 
-            [paginationPageSize]="pageSize"
-            [paginationPageSizeSelector]="[10, 20, 50, 100]" 
-            (gridReady)="onGridReady($event)"
-            (cellValueChanged)="onCellValueChanged($event)"
-            (modelUpdated)="onModelUpdated()"
-            (filterChanged)="onFilterChanged()"
-            (cellContextMenu)="onCellContextMenu($event)">
-        </ag-grid-angular>
-    </div>
+<div class="grid-wrapper" [class.hidden]="isLoading()">
+    <ag-grid-angular style="width: 100%;" class="ag-theme-alpine shadow-sm" [preventDefaultOnContextMenu]="true"
+        [rowData]="operations" [defaultColDef]="defaultColDef" [columnDefs]="columnDefs" [domLayout]="domLayout"
+        [context]="gridContext" [getRowId]="getRowId" [pagination]="true" [paginationPageSize]="pageSize"
+        [paginationPageSizeSelector]="[10, 20, 50, 100]" (gridReady)="onGridReady($event)"
+        (cellValueChanged)="onCellValueChanged($event)" (modelUpdated)="onModelUpdated()"
+        (filterChanged)="onFilterChanged()" (cellContextMenu)="onCellContextMenu($event)">
+    </ag-grid-angular>
 </div>
