--- a/Frontend/BudgetTrackerUI/src/app/pea-dashboard/pea-dashboard.html
+++ b/Frontend/BudgetTrackerUI/src/app/pea-dashboard/pea-dashboard.html
@@ -1,7 +1,7 @@
 <h2>Évolution du Portefeuille PEA</h2>
 
 <div *ngIf="isLoading()" class="flex justify-center p-10">
-  <p>Mise à jour des cours et calcul des cumuls...</p>
+  <p>Loading</p>
 </div>
 
 <div *ngIf="!isLoading() && chartSeries().length > 0">
