--- a/Frontend/BudgetTrackerUI/src/app/cc-input/cc-input.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-input/cc-input.html
@@ -1,53 +1,21 @@
 <h2>Importation de données</h2>
 
-<button mat-flat-button color="primary" (click)="fileInput.click()" [disabled]="isUploading()">
-  <mat-icon>cloud_upload</mat-icon> Charger des fichiers
-</button>
+  <div class="flex items-center gap-4 mb-4">
+    <button mat-flat-button color="primary" (click)="fileInput.click()" [disabled]="isUploading()">
+      <mat-icon>cloud_upload</mat-icon> Charger des fichiers
+    </button>
+    <p *ngIf="uploadStatus()" class="text-sm text-gray-600">{{ uploadStatus() }}</p>
+  </div>
 
-<div class="import-container" style="padding: 20px;">
   <input type="file" (change)="onFileSelected($event)" #fileInput multiple hidden>
 
-
-
-  <p *ngIf="uploadStatus()" style="margin: 10px 0;">{{ uploadStatus() }}</p>
-
-  <table mat-table [dataSource]="fichiersImports()" class="mat-elevation-z8" style="width: 100%; margin-top: 20px;">
-
-    <ng-container matColumnDef="nom">
-      <th mat-header-cell *matHeaderCellDef>Fichier</th>
-      <td mat-cell *matCellDef="let element">{{element.nomDuFichier}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="resultat">
-      <th mat-header-cell *matHeaderCellDef>Résultat</th>
-      <td mat-cell *matCellDef="let element">
-        <span [style.color]="element.isSuccessful ? 'green' : 'red'">
-          {{element.isSuccessful ? 'Succès' : element.msgErreur}}
-        </span>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="banque">
-      <th mat-header-cell *matHeaderCellDef>Banque</th>
-      <td mat-cell *matCellDef="let element">{{element.parser}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="stats">
-      <th mat-header-cell *matHeaderCellDef>Opérations (Lues/Ajoutées)</th>
-      <td mat-cell *matCellDef="let element">{{element.nombreOperationsLus}} / {{element.nombreOperationsAjoutees}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="dates">
-      <th mat-header-cell *matHeaderCellDef>Période</th>
-      <td mat-cell *matCellDef="let element">{{element.dateMin}} au {{element.dateMax}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="duree">
-      <th mat-header-cell *matHeaderCellDef>Traitement</th>
-      <td mat-cell *matCellDef="let element">{{element.tempsDeTraitementMs.toFixed(0)}} ms</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-</div>
+  <div class="grid-container">
+    <ag-grid-angular
+      style="width: 100%; height: 500px;"
+      [rowData]="fichiersImports()"
+      [columnDefs]="columnDefs"
+      [defaultColDef]="defaultColDef"
+      (gridReady)="onGridReady($event)"
+      class="ag-theme-alpine">
+    </ag-grid-angular>
+  </div>
