--- a/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-operations/cc-operations.html
@@ -34,5 +34,5 @@
 </div>
 
 <app-cc-operations-list [operations]="operations()" [customFilters]="zoomFilters()" [pageSize]="50"
-  domLayout="autoHeight" sortColumn="montant" [SaveAllSuggestedButton]="true" [externalSearch]="parentSearchString">
+  domLayout="autoHeight" sortColumn="date" [SaveAllSuggestedButton]="true" [externalSearch]="parentSearchString">
 </app-cc-operations-list>
