Ajout compteur d'utilisation et date pour les règles du CC

--- a/Frontend/BudgetTrackerUI/src/app/cc-rules/cc-rules.html
+++ b/Frontend/BudgetTrackerUI/src/app/cc-rules/cc-rules.html
@@ -5,6 +5,11 @@
   Ajouter une règle
 </button>
 
+<button mat-stroked-button color="accent" (click)="recalculateStats()"
+  matTooltip="Recalculer les stats d'usage depuis les opérations">
+  <mat-icon>refresh</mat-icon> Actualiser les stats
+</button>
+
 <ag-grid-angular style="width: 100%;" class="ag-theme-alpine" [rowData]="rules()" [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef" [domLayout]="'autoHeight'" [context]="gridContext"
   (cellValueChanged)="onCellValueChanged($event)">
