--- a/Frontend/BudgetTrackerUI/src/app/global-dashboard/global-dashboard.html
+++ b/Frontend/BudgetTrackerUI/src/app/global-dashboard/global-dashboard.html
@@ -61,5 +61,5 @@
 
 
 <div class="loading-state" *ngIf="rawData().length === 0">
-    Chargement des données historiques...
+    Chargement des données historiques... LOADING
 </div>
