--- a/Frontend/BudgetTrackerUI/src/app/app.scss
+++ b/Frontend/BudgetTrackerUI/src/app/app.scss
@@ -20,6 +20,7 @@
 .main-content-area {
   background-color: var(--azure-bg-color);
   display: flex;
+  align-items: stretch;
   box-sizing: border-box;
   height: 100%;
 
